2008-02-18  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/image/AsyncImage.java: New file. Implements
	asynchronous image loading.
	* gnu/java/awt/image/ImageConverter.java: New file.
	An image consumer that creates a concrete image with
	asynchronous behaviour.
	* gnu/java/awt/peer/x/ImageConverter.java: Removed.
	* gnu/java/awt/peer/x/XToolkit.java:
	(createImage(ImageProducer)): Use new ImageConverter.
	* gnu/java/awt/peer/x/XGraphics2D.java:
	(rawDrawImage): Unwrap AsyncImages before painting.
	(unwrap): New helper method.

2008-02-18  Jakub Jelinek  <jakub@redhat.com>

	* doc/cp-tools.texinfo (@direntry): Prefix info name with cp-.
	* doc/cp-hacking.texinfo (@direntry): Likewise.
	* doc/cp-vmintegration.texinfo (@direntry): Likewise.

2008-02-18  Roman Kennke  <kennke@aicas.com>

	* java/awt/image/RGBImageFilter.java
	(setPixels): Don't mask the source pixel.

2008-02-18  Roman Kennke  <kennke@aicas.com>

	* gnu/java/awt/peer/x/XGraphics2D.java
	(rawDrawImage): Update the rgb variable correctly. Don't
	cache translucent images.

2008-02-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* vm/reference/java/lang/reflect/Constructor.java,
	* vm/reference/java/lang/reflect/Method.java:
	Add missing java.lang.annotation.Annotation import.

2008-02-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* vm/reference/java/lang/reflect/Constructor.java,
	* vm/reference/java/lang/reflect/Method.java:
	(getParameterAnnotations()): Added.
	
2008-02-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/swing/tree/DefaultMutableTreeNode.java:
	Add generics.
	* javax/swing/tree/DefaultTreeCellEditor.java:
	(tPath): Removed.
	(configureEditingComponent(JTree,
	DefaultTreeCellRenderer,TreeCellEditor)): Removed.
	* javax/swing/tree/DefaultTreeCellRenderer.java:
	Removed unused call to getIcon().
	* javax/swing/tree/DefaultTreeSelectionModel.java:
	Add generics.

2008-02-17  Andrew John Hughes  <gnu_andrew@member.fsf.org>
